objects/B25__Availability__c.object
<CustomObject>
    <fields>
        <fullName>OUV_Vehicle_Full_VIN__c</fullName>
        <formula>OUV_Vehicle__r.OUV_FullVIN__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OUV Vehicle Full VIN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_Vehicle_Order_Number__c</fullName>
        <formula>OUV_Vehicle__r.OUV_OrderNumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OUV Vehicle Order Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_Vehicle__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <label>OUV Vehicle</label>
        <referenceTo>OUV_Vehicle__c</referenceTo>
        <relationshipLabel>Availabilities</relationshipLabel>
        <relationshipName>Availabilities</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>